# teach-in-web-app

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
scripts/: emergency_stop_node.py  realtime_control.py
src/: index.html  main.js  preload.js  styles.css
teach-in-app/: README.md  package-lock.json  package.json
teach-in-app/scenarios/: Mein Szenario.json  Mounir_Scenario.json  Scenario33.json  Test 1.json  dsd.json  example 1.json  example 2.json  example 3.json  jhjhj.json  mein scenario.json  walid.json
teach-in-app/src/: index.html  main.js  preload.js  renderer.js  styles.css
teach-in-app/src/components/: realtimeControl.js  robotInfoBox.js  rosbridge.js  scenariosExecution.js  teachInMenu.js  uiUtils.js
